--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   }
   
 
-  
   html {
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
@@ -36,7 +35,7 @@
   
   .dashboard {
     padding: 16px 16px 14px;
-    background-color: #164275;
+    background-image: url("/Music-Play/Image-music/A1.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
