--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   
   .dashboard {
     padding: 16px 16px 14px;
-    background-image: url("../Music-Play/Image-music/A11.jpg");
+    background-image: url("./Music-Play/Image-music/A3.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
